# docs/swagger.yaml
@@ -1371,33 +1371,6 @@ paths:
       summary: Make events public
       tags:
       - Events
-  /api/v1/events/remove-coupons/{eventId}:
-    patch:
-      description: Changes the visibility of specified events to public based on the
-        provided event IDs.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Events marked as public successfully
-          schema:
-            $ref: '#/definitions/response.Response'
-        "401":
-          description: Unauthorized - User not authenticated
-          schema:
-            $ref: '#/definitions/response.Response'
-        "403":
-          description: Forbidden - User does not have the required permissions
-          schema:
-            $ref: '#/definitions/response.Response'
-        "500":
-          description: Internal Server Error - An error occurred while processing
-            the request
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Remove Coupons from event
-      tags:
-      - Events
   /api/v1/events/restore:
     patch:
       description: Restores a list of deleted events based on the provided event IDs.
@@ -2249,6 +2222,37 @@ paths:
       summary: Remove a function from a role
       tags:
       - Roles
+  /api/v1/tickets/get-created-tickets:
+    get:
+      description: Fetches the details of a specific expense based on the provided
+        expense ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Category created successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - Category with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Retrieve an tickets by created
+      tags:
+      - Tickets
   /api/v1/users:
     get:
       description: Fetches a paginated list of users based on the provided filter
@@ -2543,6 +2547,111 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: Follow a user
+      tags:
+      - Users
+  /api/v1/users/invitation:
+    get:
+      description: Allows the authenticated user to follow another user by specifying
+        the followed user's ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: true or false
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: BadRequest - Invalid input or request data
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - User with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get Invitations
+      tags:
+      - Users
+  /api/v1/users/notification-following:
+    get:
+      description: Allows the authenticated user to follow another user by specifying
+        the followed user's ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: true or false
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: BadRequest - Invalid input or request data
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - User with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get Notification Following
+      tags:
+      - Users
+  /api/v1/users/notification-order:
+    get:
+      description: Allows the authenticated user to follow another user by specifying
+        the followed user's ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: true or false
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: BadRequest - Invalid input or request data
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - User with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get Notification Order
       tags:
       - Users
   /api/v1/users/profile:
