# domains/events/port/http/routes.go
@@ -16,24 +16,24 @@ func Routes(r *gin.RouterGroup, sqlDB database.IDatabase, validator validation.V
 	eventHandler := NewEventHandler(eventService)
 
 	authMiddleware := middleware.JWTAuth()
-	eventRoute := r.Group("/events").Use(authMiddleware)
+	eventRoute := r.Group("/events")
 	{
 		eventRoute.GET("/", eventHandler.GetEvents)
-		eventRoute.POST("/", eventHandler.CreateEvent)
+		eventRoute.POST("/", authMiddleware, eventHandler.CreateEvent)
 		eventRoute.GET("/:id", eventHandler.GetEvent)
-		eventRoute.PUT("/:id", eventHandler.UpdateEvent)
-		eventRoute.DELETE("/:id", eventHandler.DeleteEvent)
-		eventRoute.DELETE("/", eventHandler.DeleteMultipleEvent)
-		eventRoute.GET("/get-created-events", eventHandler.GetCreatedEvent)
-		eventRoute.GET("/get-created-events-analysis", eventHandler.GetCreatedEventAnalysis)
-		eventRoute.PATCH("/restore", eventHandler.RestoreEvents)
-		eventRoute.GET("/get-deleted-events", eventHandler.GetTrashedEvent)
-		eventRoute.PATCH("/favourite/:id", eventHandler.FavouriteEvent)
-		eventRoute.PATCH("/unfavourite/:id", eventHandler.UnFavouriteEvent)
-		eventRoute.GET("/get-favourite-events", eventHandler.GetFavouriteEvent)
-		eventRoute.PATCH("/make-events-private", eventHandler.MakeEventPrivate)
-		eventRoute.PATCH("/make-events-public", eventHandler.MakeEventPublic)
-		eventRoute.PATCH("/apply-coupons/:id", eventHandler.ApplyCoupons)
-		eventRoute.GET("/check-favourite/:id", eventHandler.CheckFavourite)
+		eventRoute.PUT("/:id", authMiddleware, eventHandler.UpdateEvent)
+		eventRoute.DELETE("/:id", authMiddleware, eventHandler.DeleteEvent)
+		eventRoute.DELETE("/", authMiddleware, eventHandler.DeleteMultipleEvent)
+		eventRoute.GET("/get-created-events", authMiddleware, eventHandler.GetCreatedEvent)
+		eventRoute.GET("/get-created-events-analysis", authMiddleware, eventHandler.GetCreatedEventAnalysis)
+		eventRoute.PATCH("/restore", authMiddleware, eventHandler.RestoreEvents)
+		eventRoute.GET("/get-deleted-events", authMiddleware, eventHandler.GetTrashedEvent)
+		eventRoute.PATCH("/favourite/:id", authMiddleware, eventHandler.FavouriteEvent)
+		eventRoute.PATCH("/unfavourite/:id", authMiddleware, eventHandler.UnFavouriteEvent)
+		eventRoute.GET("/get-favourite-events", authMiddleware, eventHandler.GetFavouriteEvent)
+		eventRoute.PATCH("/make-events-private", authMiddleware, eventHandler.MakeEventPrivate)
+		eventRoute.PATCH("/make-events-public", authMiddleware, eventHandler.MakeEventPublic)
+		eventRoute.PATCH("/apply-coupons/:id", authMiddleware, eventHandler.ApplyCoupons)
+		eventRoute.GET("/check-favourite/:id", authMiddleware, eventHandler.CheckFavourite)
 	}
 }
